--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
     
     <div class="container-lejour">
         <!--HEADER-->
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">Navbar</a>
-            <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-            </form>
-          </nav>
+        <nav class="navbar header">
+            <a class="navbar-brand"><img class="logo" src="./assets/logo/logo-branco.png"  alt=""></a>
+            <a href=""><img src="./assets/Menu/perfil.png" alt=""></a>
+        </nav>
 
           <!-- Sidebar -->
         <main class="conteudo-principal">
