--- a/perfil.html
+++ b/perfil.html
@@ -80,9 +80,9 @@
                       </div>
                 </div>
         
-                <div class="col-md-6 my-cards">
+                <div class="col-md-6 my-cards ">
                     <div class="row">
-                            <div class="col">
+                            <div class="col p-0">
                               <div class="card width-cards">
                                 <form>
                                     <div class="form-row">
